<?xml version="1.0" encoding="utf-8"?>
<!--
	Copyright (C) 2010 Regis Montoya (aka r3gis - www.r3gis.fr)

	This file is part of CSipSimple. 
	CSipSimple is free software: you can
	redistribute it and/or modify it under the terms of the GNU General
	Public License as published by the Free Software Foundation, either
	version 3 of the License, or (at your option) any later version.

	CSipSimple is distributed in the hope that it will be useful, but
	WITHOUT ANY WARRANTY; without even the implied warranty of
	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
	General Public License for more details. You should have received a
	copy of the GNU General Public License along with CSipSimple. If not,
	see <http://www.gnu.org/licenses/>.
	
-->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

	<string name="app_name">CSipSimple</string>
	<string name="next">Next</string>
	<string name="init">Init...</string>
	<string name="unable_to_download_file">Unable to download file</string>
	<string name="connection_not_valid">Selected network route not available (activate WiFi or change preferences to use 3G)</string>
	<string name="invalid_sip_uri">Sip uri is invalid for call</string>
	<string name="accounts">Accounts</string>
	<string name="other_accounts">Other accounts</string>
	<string name="save">Save</string>
	<string name="cancel">Cancel</string>
	<string name="activate_account">Activate account</string>
	<string name="deactivate_account">Deactivate account</string>
	<string name="delete_account">Delete account</string>
	<string name="modify_account">Modify account</string>
	<string name="add_account">Add account</string>
	<string name="choose_wizard">Choose wizard</string>
	<string name="use">Use :</string>
	<string name="use_pstn">Use mobile</string>
	<string name="use_skype">Use Skype</string>
	<string name="ongoing_call">Call in Progress</string>
	<string name="missed_call">Missed call</string>
	<string name="recentCalls_empty">No Call Logs</string>
	<string name="filters">Filters</string>
	<string name="filters_desc">To apply when integration to Android is used</string>
	<string name="filters_for">Filters for</string>
	<string name="add_filter">Add filter / rewrite rule</string>
	<string name="delete_filter">Delete filter</string>
	<string name="callLog_delete_entry">Delete this call</string>
	<string name="callLog_delete_all">Delete all calls</string>
	<string name="callLog_delDialog_title">Delete Call Logs</string>
	<string name="callLog_delDialog_message">Are you sure you want to delete all calls from the log?</string>
	<string name="callLog_delDialog_yes">Yes</string>
	<string name="callLog_delDialog_no">No</string>
	<string name="gsm">Mobile</string>
	<string name="dial_tab_name_text">Dial</string>
	<string name="calllog_tab_name_text">CallLogs</string>
	<string name="messages_tab_name_text">Chat</string>
	<string name="menu_disconnect">Disconnect</string>
	<string name="service_ticker_registered_text">SIP Registered</string>
	<string name="outgoing_call_chooser_call_text">Call</string>
	<string name="reorder">Reorder</string>
	<string name="backup_restore">Backup / Restore</string>
	<string name="backup">Backup</string>
	<string name="faq">FAQ</string>
	<string name="help">Help</string>	
	<string name="record_logs">Record logs to send it to dev team and report a bug</string>
	<string name="send_logs">Stop recording logs (OPTIONALY send it)</string>
	<string name="view_existing_issues">Consult existing issues</string>
	<string name="ok">OK</string>
	<string name="misc">Misc</string>
	<string name="warning">WARNING</string>
	<string name="disconnect_and_incoming_explaination">You are configured to be available for this network !!! By clicking OK here you confirm that you don\'t want to be available until next start of the application</string>
	<string name="disconnect_and_will_restart">Will automatically restart when : <xliff:g id="networks" example="3G">%s</xliff:g> will become available (change settings if you don\'t want)</string>
	<string name="gadget_title">SIP Account switcher</string>
	<string name="search_in_contacts">Search in contacts</string>
	<string name="pickup_sip_uri">Pickup SIP contact</string>
	<string name="display_icon_in_status_bar_desc">Should the application display an icon in the status bar when registered</string>
    <string name="display_icon_in_status_bar">Display icon in status bar</string>
	<string name="another_application_use_sip_port">Another application is currently using SIP port! Can\'t start !!!</string>
	<string name="choose_phone">Choose phone</string>
	<string name="no_phone_found">No phone found for this contact</string>
	<string name="show_password">Show password</string>
	<string name="this_codec_is_not_free">**This codec is not free !!!**\nPlease ensure that somebody (your SIP provider or yourself) have purchased a license that allow you to use this codec! We (as application distributors) are not responsible for an illegal use of this codec.\nIt\'s up to you to be sure that you are authorized to use this codec.\nPurchase link : </string>
	<string name="voice_mail">Voice mail</string>
	
	<string name="permlab_useSip">Use sip</string>
	<string name="permdesc_useSip">Place SIP calls, send SIP messages and control SIP communications</string>
	<string name="permlab_configureSip">Use sip</string>
	<string name="permdesc_configureSip">Place SIP calls, send SIP messages and control SIP communications</string>
	
	<!-- login page strings -->
	<string name="login_welcome_text">Welcome to cSipSimple. \r\nPlease enter your email address and password to login. </string>
	<string name="login_email_label">Email: </string>
	<string name="login_password_label">Password: </string>
	<string name="login_button_text">Login</string>
	<string name="login_register_label">Don\'t have an account? </string>
	<string name="login_forgot_password_label">Forgotten your password?</string>
	<string name="login_wait_message">Signing in, please wait...</string>
	<string name="invalid_username_password">Invalid username and/or password.</string>

	<!-- new menu options -->
	<string name="status">Status</string>
	<string name="logout">Logout</string>
	<string name="sip_settings">SIP Account Settings</string>
	<string name="sip_settings_desc">Open sip settings in expert mode.</string>
	<string name="logout_warning">Are you sure you want to logout?</string>
	<string name="login_error">Login Error</string>
	<string name="empty_email_message">Email field is empty.</string>
	<string name="empty_pas_message">Password field is empty.</string>
	<string name="no_network_connection_title">No network connection</string>
	<string name="no_network_connection_msg">Unable to login. Please check\nyour Internet connection\nand try again...</string>
	
</resources>
