<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/login_home_layout"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<!-- wellcome message starts -->
	<LinearLayout android:id="@+id/wellcome_row"
		android:orientation="vertical" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:background="@android:color/black"
		android:layout_marginBottom="10dip" android:layout_marginTop="20dip">
		<LinearLayout android:id="@+id/wellcome_row"
			android:orientation="vertical" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:background="@android:color/black"
			android:paddingLeft="15dip" android:paddingRight="15dip">
			<TextView android:layout_height="wrap_content" android:id="@+id/welcome_message"
				android:text="@string/login_welcome_text" android:layout_width="wrap_content"
				android:gravity="left" android:layout_marginTop="5dip"></TextView>
		</LinearLayout>
	</LinearLayout>

	<!-- email and password fields starts -->
	<LinearLayout android:id="@+id/email_row"
		android:orientation="vertical" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_marginTop="20dip"
		android:paddingLeft="15dip" android:paddingRight="15dip">
		<TextView android:id="@+id/emailTextView" android:text="@string/login_email_label"
			android:layout_width="fill_parent" android:layout_height="wrap_content">
		</TextView>
		<EditText android:id="@+id/login_email" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:singleLine="true"
			android:textSize="16sp" android:autoText="false" android:capitalize="none"
			android:scrollHorizontally="true" android:layout_marginTop="5dip">
		</EditText>
	</LinearLayout>

	<LinearLayout android:id="@+id/password_row"
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_marginTop="10dip"
		android:paddingLeft="15dip" android:paddingRight="15dip">
		<TextView android:id="@+id/passTextView" android:text="@string/login_password_label"
			android:layout_width="fill_parent" android:layout_height="wrap_content" />
		<EditText android:id="@+id/login_password" android:inputType="textPassword"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:textSize="16sp" android:scrollHorizontally="true"
			android:layout_marginTop="5dip" />
	</LinearLayout>
	<!-- email and password fields ends -->

	<!-- Login button starts -->
	<RelativeLayout android:id="@+id/password_row"
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="horizontal" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_marginTop="10dip"
		android:paddingLeft="15dip" android:paddingRight="15dip">
		<Button android:id="@+id/login_button" android:layout_width="110dip"
			android:layout_height="40dip" android:text="@string/login_button_text"
			android:layout_alignParentRight="true" android:gravity="center_vertical|center_horizontal" />
	</RelativeLayout>
	<!-- Login button ends -->

	<!-- register and forget password starts -->
	<LinearLayout android:id="@+id/bottom_row"
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_marginBottom="10dip"
		android:layout_marginTop="30dip" android:paddingLeft="15dip"
		android:paddingRight="15dip">
		<LinearLayout android:id="@+id/bottom_row1"
			xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="horizontal" android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:id="@+id/register_label_txt"
				android:text="@string/login_register_label"></TextView>
			<TextView android:layout_width="100dip"
				android:layout_height="40dip" android:id="@+id/register_label"
				android:text="@string/login_register_label"></TextView>
		</LinearLayout>

		<LinearLayout android:id="@+id/bottom_row2"
			xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="horizontal" android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:id="@+id/login_forgot_password_txt"
				android:text="@string/login_forgot_password_label"></TextView>
			<TextView android:layout_width="100dip"
				android:layout_height="40dip" android:id="@+id/login_forgot_password"
				android:text="@string/login_forgot_password_label"></TextView>
		</LinearLayout>
	</LinearLayout>
	<!-- register and forget password ends -->

</LinearLayout>